Fixed bug causing NativeReactor to run at 100% CPU
See also https://github.com/amphp/aerys/issues/68

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+### 1.0.8
+
+- Fix NativeReactor running a busy loop if no timers are active.
+  Properly block now in NativeReactor inside stream_select().
+
 ### 1.0.7
 
 - Several combinator functions could result in a Promise already
